--- a/src/todo.css
+++ b/src/todo.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 .bodyin {
     background-color: #212529; /* Choose your desired background color */
@@ -6,8 +7,8 @@
     min-height: 100vh; /* Ensures the background covers the full viewport */
 }
 .submit-button {
-    color: white;
-    background-color: #343a40;
+    color: black;
+    background-color: #e9ecef;
     border-radius: 30px;
     font-size: 18px;
     font-weight: 400;
